# obsidian_fastmcp

./: .gitignore  CLAUDE.md  README.md  anki-integration-plan.md  main.py  papers-mcp-server-plan.md  pyproject.toml  research-capabilities-plan.md
obsidian_fastapi_fastmcp/models/: __init__.py  note_models.py
obsidian_fastmcp/: __init__.py  main.py
obsidian_fastmcp/config/: __init__.py
obsidian_fastmcp/tools/: __init__.py  note_tools.py
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/handlers/: __init__.py  note_handlers.py  note_registrations.py
src/models/: __init__.py  note_models.py
src/tools/: __init__.py  add_image.py  create_note.py  insert_wikilinks_note.py  load_metadata.py  note_tools.py  read_note.py  update_note.py
src/utilities/: __init__.py  insert_wikilinks.py
src/utils/: insert_wikilinks.py  utils.py
tests/: __init__.py  conftest.py  test_note_operations.py  test_wikilinks.py
