[project]
name = "obsidian-fastapi-fastmcp"
version = "0.1.0"
description = "FastAPI application for Obsidian integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.4",
    "fastmcp>=2.8.0",
    "mcp[cli]>=1.9.4",
    "python-dotenv",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
